--- a/site_ViveBio/views/productCard.html
+++ b/site_ViveBio/views/productCard.html
@@ -104,7 +104,7 @@
       <div class="card__perfil">
         <div class="card__nombre">
           <img src="/images/cara4.jpg" alt="">
-          <h2>Iris Luna</h2>
+          <h2>Samira Luna</h2>
         </div>
         <div class="card__descripcion">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex ducimus doloremque porro? Nulla
@@ -123,14 +123,14 @@
                 <img src="/images/jabon_humectante_2.jpg" alt="producto">
                 <span class="promo">10% off</span>
               </div>
+              <div class="info-container">
+                <h2> Jabón Humectante</h2>
+                <h4>BioCorporal</h4>
+                <h3>$ 300.00.-</h3>
             </a>
-            <div class="info-container">
-              <h2> Jabón Humectante</h2>
-              <h4>BioCorporal</h4>
-              <h3>$ 300.00.-</h3>
-              <span class="rating">⭐⭐⭐⭐</span>
-              <a href="#" class="add-cart">Lo quiero!🤩</a>
-            </div>
+            <span class="rating">⭐⭐⭐⭐</span>
+            <a href="#" class="add-cart">Lo quiero!🤩</a>
+          </div>
           </div>
           <div class="card estilo-c">
             <a href="#">
@@ -138,14 +138,14 @@
                 <img src="/images/jabonExfo_luffa.jpg" alt="producto">
                 <span class="promo">25% off</span>
               </div>
+              <div class="info-container">
+                <h2> Kit Exfoliante </h2>
+                <h4>BioSpa<h4>
+                    <h3>$ 600.00.-</h3>
             </a>
-            <div class="info-container">
-              <h2> Kit Exfoliante </h2>
-              <h4>BioSpa<h4>
-                  <h3>$ 600.00.-</h3>
-                  <span class="rating">⭐⭐⭐⭐</span>
-                  <a href="#" class="add-cart">Lo quiero!🤩</a>
-            </div>
+            <span class="rating">⭐⭐⭐⭐</span>
+            <a href="#" class="add-cart">Lo quiero!🤩</a>
+          </div>
           </div>
           <div class="card estilo-c">
             <a href="#">
@@ -153,14 +153,14 @@
                 <img src="/images/jaboncito_exfoliantes.jpg" alt="producto">
                 <span class="promo">15% off</span>
               </div>
+              <div class="info-container">
+                <h2>Kit Coco</h2>
+                <h4>BioCapilar</h4>
+                <h3>$ 300.00.-</h3>
             </a>
-            <div class="info-container">
-              <h2>Kit Coco</h2>
-              <h4>BioCapilar</h4>
-              <h3>$ 300.00.-</h3>
-              <span class="rating">⭐⭐⭐⭐</span>
-              <a href="#" class="add-cart">Lo quiero!🤩</a>
-            </div>
+            <span class="rating">⭐⭐⭐⭐</span>
+            <a href="#" class="add-cart">Lo quiero!🤩</a>
+          </div>
           </div>
         </section>
         <div class="banner">
