cambio ícono carrito

--- a/site_ViveBio/views/productCard.html
+++ b/site_ViveBio/views/productCard.html
@@ -69,7 +69,7 @@
           Cuidar tu piel y la salud de la Tierra, sin maltratar animales, es posible; <br> SUMATE AL CAMBIO💚
         </p>
         <div class="producto__cart">
-          <a href="#" class="add-cart">Lo quiero!🤩</a>
+          <a href="#" class="add-cart">Lo quiero! 🛒</a>
         </div>
       </div>
     </section>
@@ -129,7 +129,7 @@
                 <h3>$ 300.00.-</h3>
             </a>
             <span class="rating">⭐⭐⭐⭐</span>
-            <a href="#" class="add-cart">Lo quiero!🤩</a>
+            <a href="#" class="add-cart">Lo quiero! 🛒</a>
           </div>
           </div>
           <div class="card estilo-c">
@@ -144,7 +144,7 @@
                     <h3>$ 600.00.-</h3>
             </a>
             <span class="rating">⭐⭐⭐⭐</span>
-            <a href="#" class="add-cart">Lo quiero!🤩</a>
+            <a href="#" class="add-cart">Lo quiero! 🛒</a>
           </div>
           </div>
           <div class="card estilo-c">
@@ -159,7 +159,7 @@
                 <h3>$ 300.00.-</h3>
             </a>
             <span class="rating">⭐⭐⭐⭐</span>
-            <a href="#" class="add-cart">Lo quiero!🤩</a>
+            <a href="#" class="add-cart">Lo quiero! 🛒</a>
           </div>
           </div>
         </section>
