--- a/site_ViveBio/public/css/productCard.css
+++ b/site_ViveBio/public/css/productCard.css
@@ -426,6 +426,10 @@
         border-radius: 15px;
         font-size: 15px;
     }
+
+    .productCard .banner img{
+        display:none;
+    }
 }
 
 
