copio footer y header de develop/elimino banner en desktop

--- a/site_ViveBio/views/productDetail.html
+++ b/site_ViveBio/views/productDetail.html
@@ -50,6 +50,8 @@
             </div>
         </nav>
     </header>
+    <div class="carrusel__home">
+        <img src="/images/logo.png" alt="logo" class="banner">
     </div>
     <main>
         <nav>
