--- a/site_ViveBio/public/css/product.css
+++ b/site_ViveBio/public/css/product.css
@@ -44,7 +44,7 @@
 
 
 .product .main__categorías li a:hover {
-  color: aquamarine;
+  color: var(--aquamarine);
   border-radius: 8px;
 }
 
@@ -72,7 +72,7 @@
   opacity: 0.3;
   filter: alpha(opacity=100);
   zoom: 1;
-  color: aquamarine;
+  color: var(--aquamarine);
 }
 
 
