--- a/site_ViveBio/public/css/productAll.css
+++ b/site_ViveBio/public/css/productAll.css
@@ -12,10 +12,11 @@
     color: white;
     background-color: var(--verdeOscuro);
     margin: 30px 0;
-    height: 60px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 32px;
 }
 
 
@@ -114,7 +115,178 @@
 }
 
 .productAll .estilo-c .add-cart:hover {
-    color: var(--verdeOscuro);
+    color: var(--azulSuave);
     background-color: var(--verdeAmarillento);
+    border: 1px solid var(--azul);
+}
+
+.productAll .banner img {
+    width: 100%;
+    transform: scale(1);
+    margin-bottom: -7px;
+    display: block;
+}
+
+
+@media(max-width: 960px){
+
+.productAll .row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.productAll .títulos {
+    text-align: center;
+    margin-bottom: 10px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.productAll .card.estilo-c {
+    width: 300px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.productAll .estilo-c .img-container .promo {
+    position: absolute;
+    top: 10px;
+    left: 0;
+    font-size: 20px;
+    padding: 15px;
+    border-bottom-right-radius: 25px;
+    border-top-right-radius: 25px;
+}
+
+.productAll .estilo-c .info-container {
+    height: 140px;
+    border-radius: 5px;
+    padding-left: 10px;
+
+}
+
+
+.productAll .estilo-c .info-container h2 {
+    font-size: 16px;
+
+}
+
+.productAll .estilo-c .info-container h4 {
+    font-size: 12px;
+
+}
+
+.productAll .estilo-c .info-container h3 {
+    font-size: 24px;
+}
+
+
+.productAll .estilo-c .info-container h3,
+.estilo-c .info-container .promo,
+.estilo-c .info-container span {
+    padding: 15px;
+    width: 70%;
+}
+
+
+
+.productAll .estilo-c .add-cart {
+    padding: 5px;
     border: 1px solid white;
+    border-radius: 15px;
+    font-size: 15px;
+}
+
+}
+
+@media (max-width: 460px) {
+
+.productAll .row {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 30px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.productAll .títulos {
+    font-size: 24px;
+    height: 60px;
+}
+
+
+.productAll .card.estilo-c {
+    width: 300px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.productAll .estilo-c .img-container .promo {
+    position: absolute;
+    top: 10px;
+    left: 0;
+    font-size: 20px;
+    padding: 15px;
+    border-bottom-right-radius: 25px;
+    border-top-right-radius: 25px;
+}
+
+.productAll .estilo-c .info-container {
+    height: 140px;
+    border-radius: 5px;
+    padding-left: 10px;
+
+}
+
+
+.productAll .estilo-c .info-container h2 {
+    font-size: 16px;
+
+}
+
+.productAll .estilo-c .info-container h4 {
+    font-size: 12px;
+
+}
+
+.productAll .estilo-c .info-container h3 {
+    font-size: 24px;
+}
+
+
+.productAll .estilo-c .info-container h3,
+.estilo-c .info-container .promo,
+.estilo-c .info-container span {
+    padding: 15px;
+    width: 70%;
+}
+
+
+
+.productAll .estilo-c .add-cart {
+    padding: 5px;
+    border: 1px solid white;
+    border-radius: 15px;
+    font-size: 15px;
+}
+
+
+
 }
