product con detalles

--- a/site_ViveBio/views/productDetail.html
+++ b/site_ViveBio/views/productDetail.html
@@ -61,6 +61,7 @@
                 <li><a href="#">BioSpa</a></li>
             </ul>
         </nav>
+        <h1 class="títulos">BioCorporal<h1>
                 <h2> Jabón Antiséptico </h2>
                 <article class="main__contenedor-img-txt">
                     <div class="img">
@@ -94,6 +95,9 @@
                             antiinflamatorias, analgésicas, refrescantes y tonificantes!</p>
                     </div>
                 </article>
+                <div class="banner">
+                    <img src="/images/imagen_eco.jpg" alt="">
+                  </div>
     </main>
     <footer class="footer">
         <div class="DatFooter">
