--- a/site_ViveBio/public/css/product.css
+++ b/site_ViveBio/public/css/product.css
@@ -48,12 +48,23 @@
   border-radius: 8px;
 }
 
+
 /* Artículos */
+.product .títulos {
+  text-align: center;
+  color: white;
+  background-color: var(--verdeOscuro);
+  margin: 30px 0;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 32px;
+}
 
 .product main h2 {
-  background-image: url('/images/tex.jpeg');
-  background-repeat: no-repeat;
-  color: white;
+  background-color: var(--aquamarine);
+  color: var(--VioletaOscuro);
   text-align: center;
   margin: auto;
   border-radius: 8px;
@@ -102,6 +113,13 @@
 
 .product article {
   padding: 40px;
+}
+
+.product .banner img {
+  width: 100%;
+  transform: scale(1);
+  margin-bottom: -7px;
+  display: block;
 }
 
 /* Responsive Tablet */
