--- a/site_ViveBio/views/productDetail.html
+++ b/site_ViveBio/views/productDetail.html
@@ -64,13 +64,13 @@
         <h1 class="títulos">BioCorporal<h1>
                 <h2> Jabón Antiséptico </h2>
                 <article class="main__contenedor-img-txt">
-                    <div class="img">
-                        <a href=""> <img src="/images/jabones.jpg" alt=""></a>
-                    </div>
-                    <div class="main__texto">
-                        <p>Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
-                                oleato de cedrón y caléndula.</span> Te aportan sus propiedades antibacterianas,
-                            antiinflamatorias, analgésicas, refrescantes y tonificantes!</p>
+                            <div class="img">
+                                    <a href=""> <img src="/images/jabon_antiseptico.jpg" alt=""></a>
+                            </div>
+                            <div class="main__texto">
+                                    <p>🌿Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
+                                        oleato de cedrón y caléndula.</span> Te aportan sus propiedades antibacterianas,
+                                        antiinflamatorias, analgésicas, refrescantes y tonificantes 💚</p>
                     </div>
                     <div class="main__info-inivisible">
                         <a href="/images/corazon.png"></a>
@@ -81,18 +81,18 @@
                 <article class="main__contenedor-img-txt">
                     <a href=""> <img src="/images/jabon_exfo.jpg" alt=""></a>
                     <div class="main__texto">
-                        <p>Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
+                        <p>🌿Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
                                 oleato de cedrón y caléndula.</span> Te aportan sus propiedades antibacterianas,
-                            antiinflamatorias, analgésicas, refrescantes y tonificantes!</p>
+                            antiinflamatorias, analgésicas, refrescantes y tonificantes 💚</p>
                     </div>
                 </article>
                 <h2> Jabón Humectante </h2>
                 <article class="main__contenedor-img-txt">
                     <a href=""> <img src="/images/jabon_humectante.jpg" alt=""></a>
                     <div class="main__texto">
-                        <p>Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
+                        <p>🌿Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
                                 oleato de cedrón y caléndula.</span> Te aportan sus propiedades antibacterianas,
-                            antiinflamatorias, analgésicas, refrescantes y tonificantes!</p>
+                            antiinflamatorias, analgésicas, refrescantes y tonificantes 💚</p>
                     </div>
                 </article>
                 <div class="banner">
