--- a/site_ViveBio/public/css/product.css
+++ b/site_ViveBio/public/css/product.css
@@ -40,6 +40,7 @@
   padding: 10px;
   margin-left: 10px;
   margin-right: 10px;
+  box-shadow: none;
 }
 
 
@@ -70,6 +71,7 @@
   border-radius: 8px;
   width: 90%;
   margin-bottom: 30px 0;
+  box-shadow: 10px 5px 5px black;
 }
 
 .product .main__contenedor-img-txt {
@@ -79,7 +81,7 @@
   width: 100%;
   margin-bottom: 40px;
 }
-
+ 
 .product .main__texto:hover{
   opacity: 0.3;
   filter: alpha(opacity=100);
@@ -133,6 +135,10 @@
     flex-direction: row;
     justify-content: space-evenly;
     font-weight: bold;
+  }
+
+  .product .main__categorías a {
+    box-shadow: 10px 5px 5px black;
   }
 
   /* Artículos */
