sprint 2 para entrega

--- a/site_ViveBio/views/productCard.html
+++ b/site_ViveBio/views/productCard.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/5a8fb06a25.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/c5fd8ed388.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/styles.css">
   <title>Product Card</title>
 </head>
@@ -49,9 +51,6 @@
         </div>
     </nav>
 </header>
-<div class="carrusel__home">
-    <img src="/images/logo.png" alt="logo" class="banner">
-</div>
   <main>
     <section class="producto">
       <div class="producto__imagen">
