--- a/site_ViveBio/views/productDetail.html
+++ b/site_ViveBio/views/productDetail.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
     <script src="https://kit.fontawesome.com/c5fd8ed388.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/5a8fb06a25.js" crossorigin="anonymous"></script>
     <title>ProductDetail</title>
 </head>
 
@@ -50,9 +51,6 @@
             </div>
         </nav>
     </header>
-    <div class="carrusel__home">
-        <img src="/images/logo.png" alt="logo" class="banner">
-    </div>
     <main>
         <nav>
             <ul class="main__categorías">
