--- a/site_ViveBio/public/css/register.css
+++ b/site_ViveBio/public/css/register.css
@@ -13,8 +13,6 @@
 
 .header_register img {
     width: 150px;
-    padding-bottom: 10px;
-    padding-top: 5px;
 }
 
 .container {
@@ -108,7 +106,8 @@
 
 @media (min-width: 768px) {
     .header_register img {
-        width: 180px;
+        width: 250px;
+        margin-bottom: 10px;
     }
 
     .box_1 {
@@ -121,5 +120,15 @@
 
     .container {
         width: 350px;
+        height: 500px;
+    }
+    .register_form-box{
+        margin: 10px 0;
+    }
+    .register_form-box:first-child {
+        margin-top: 0;
+    }
+    .register_form-box:last-child{
+        margin-bottom: 0;
     }
 }
