--- a/site_ViveBio/views/register.html
+++ b/site_ViveBio/views/register.html
@@ -19,11 +19,11 @@
             <div class="box_introduccion">
                 <div class="box_1">
                     <p style="text-shadow: 1px 1px 2px black;">Binvenido a </p>
-                    <p style="color: rgb(102, 212, 102);text-shadow: 1px 1px 2px black;">ViveBio</p>
+                    <p style="color: var(--verdeFuerte);text-shadow: 1px 1px 2px black;">ViveBio</p>
                 </div>
                 <div class="box_2">
                     <p style="text-shadow: 1px 1px 2px black;">Ya tenés cuenta?</p>
-                    <a href="/login" style="color: rgb(102, 212, 102);text-shadow: 1px 1px 1px black;">Logueate!</a>
+                    <a href="/login" style="color: var(--verdeFuerte);text-shadow: 1px 1px 1px black;">Logueate!</a>
                 </div>
             </div>
             <h1>Registro</h1>
