--- a/site_ViveBio/views/login.html
+++ b/site_ViveBio/views/login.html
@@ -27,18 +27,18 @@
             <div class="box_introduccion">
                 <div class="login_box_1">
                     <p style="text-shadow: 1px 1px 2px black;">Binvenido a </p>
-                    <p style="color: rgb(102, 212, 102);text-shadow: 1px 1px 2px black;">ViveBio</p>
+                    <p style="color: var(--verdeFuerte);text-shadow: 1px 1px 2px black;">ViveBio</p>
                 </div>
                 <div class="login_box_2">
                     <p style="text-shadow: 1px 1px 2px black;">No tenés cuenta?</p>
                     <a href="/register"
-                        style="color: rgb(102, 212, 102);text-shadow: 1px 1px 1px black;">Registrate!</a>
+                        style="color: var(--verdeFuerte);text-shadow: 1px 1px 1px black;">Registrate!</a>
                 </div>
             </div>
             <h1>Login</h1>
             <div class="login_box-gf">
                 <div class="login_google">
-                    <button type="submit"><i class="fab fa-google-plus"></i>Unirse con Google</button>
+                    <button type="submit"><i class="fab fa-google-plus"></i></button>
                 </div>
                 <div class="login_facebook">
                     <button type="submit"><i class="fab fa-facebook"></i></button>
