--- a/site_ViveBio/public/css/home.css
+++ b/site_ViveBio/public/css/home.css
@@ -123,6 +123,22 @@ primera parte del main
     justify-content: flex-end;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+.precio{
+    display: flex;
+    margin-top: 10px;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.precio h4{    
+    text-decoration: line-through;/*tachamos el precio*/
+    color: var(--azulMarino);
+}
+.precio p{
+    font-size: 30px;
+    color: black;
+    margin-left: 10px;
+}
 
 
 /******************************************
@@ -243,7 +259,7 @@ segunda parte del main
     }
 
     .home main .sect1 article .verart__home {
-        margin: 15px 20px 15px auto;
+        margin: 15px 65px 15px auto;
     }
 
     .home .vermas__home .vermas-general {
