--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -38,7 +38,7 @@
             <div class="header__opciones">
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/product">Productos</a></li>
+                    <li><a href="/productAll">Productos</a></li>
                     <li><a href="">Quienes somos</a></li>
                     <li><a href="">Contacto</a></li>
                 </ul>
@@ -66,8 +66,12 @@
                 <div class="imgart__home">
                     <img src="/images/producto1.jpeg" alt="">
                 </div>
+                <div class="precio">
+                    <h4>$600</h4>
+                    <p>$300</p>
+                </div>
                 <div class="verart__home">
-                    <a href="#">Ver mas</a>
+                    <a href="/productCard">Ver mas</a>
                 </div>
             </article>
             <article class="art__home">
@@ -77,8 +81,12 @@
                 <div class="imgart__home">
                     <img src="/images/producto2.jpeg" alt="">
                 </div>
+                <div class="precio">
+                    <h4>$600</h4>
+                    <p>$300</p>
+                </div>
                 <div class="verart__home">
-                    <a href="#">Ver mas</a>
+                    <a href="/productCard">Ver mas</a>
                 </div>
             </article>
             <article class="art__home">
@@ -88,8 +96,12 @@
                 <div class="imgart__home">
                     <img src="/images/producto3.jpeg" alt="">
                 </div>
+                <div class="precio">
+                    <h4>$600</h4>
+                    <p>$300</p>
+                </div>
                 <div class="verart__home">
-                    <a href="#">Ver mas</a>
+                    <a href="/productCard">Ver mas</a>
                 </div>
             </article>
             <article class="art__home" id="art__home4">
@@ -99,13 +111,17 @@
                 <div class="imgart__home">
                     <img src="/images/producto1.jpeg" alt="">
                 </div>
+                <div class="precio">
+                    <h4>$600</h4>
+                    <p>$300</p>
+                </div>
                 <div class="verart__home">
-                    <a href="#">Ver mas</a>
+                    <a href="/productCard">Ver mas</a>
                 </div>
             </article>
             <article class="vermas__home">
                 <div class='vermas-general'>
-                    <a href="#">Ver mas</a>
+                    <a href="/productAll">Ver mas</a>
                 </div>
             </article>
         </section>
@@ -141,7 +157,7 @@
         <div class="DatFooter">
             <ul class="direcciones__footer">
                 <li><a href="/">Home</a></li>
-                <li><a href="/product">Productos</a></li>
+                <li><a href="/productAll">Productos</a></li>
                 <li><a href="#">Consejos</a></li>
                 <li><a href="#">Política de devolución</a></li>
             </ul>
